Use managed identity for deployed authentication (#11)
* Use either Managed Identity or connection string for Blob Storage
* Choice based on configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,9 @@ services:
       SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
       FILE_CREATED_SUBSCRIPTION_ADDRESS: ${FILE_CREATED_SUBSCRIPTION_ADDRESS:-notset}
       FILE_CREATED_TOPIC_ADDRESS: ${FILE_CREATED_TOPIC_ADDRESS:-notset}
-      BLOB_STORAGE_CONNECTION_STRING: ${BLOB_STORAGE_CONNECTION_STRING:-notset}
       BLOB_STORAGE_CONTAINER_NAME: ${BLOB_STORAGE_CONTAINER_NAME:-notset}
+      BLOB_STORAGE_CONNECTION_STRING: ${BLOB_STORAGE_CONNECTION_STRING:-DefaultEndpointsProtocol=https;AccountName=dummy;AccountKey=dummy;EndpointSuffix=core.windows.net}
+      USE_BLOB_STORAGE_CONNECTION_STRING: "true"
       SHAREPOINT_SITE_ID: ${SHAREPOINT_SITE_ID:-notset}
       SHAREPOINT_TENANT_ID: ${SHAREPOINT_TENANT_ID:-notset}
       SHAREPOINT_CLIENT_ID: ${SHAREPOINT_CLIENT_ID:-notset}
