--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-file-sender",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "FFC Grants file sender microservice",
   "homepage": "https://github.com/DEFRA/ffc-grants-file-sender",
   "main": "app/index.js",
@@ -13,13 +13,14 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@azure/identity": "^1.3.0",
     "@azure/storage-blob": "^12.5.0",
     "@hapi/hapi": "^20.0.3",
     "@hapi/wreck": "^17.1.0",
     "@pnp/nodejs-commonjs": "^2.3.0",
     "applicationinsights": "^1.8.10",
-    "ffc-protective-monitoring": "^1.0.0",
     "ffc-messaging": "^2.1.1",
+    "ffc-protective-monitoring": "^1.0.0",
     "joi": "^17.4.0"
   },
   "devDependencies": {
