Configure Helm replicas, uid and scaling (#12)
* Configure Helm replicas, uid and scaling
* Move sharepoint interaction into a service
* Update Helm chart with sharepoint env changes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,9 @@ services:
       BLOB_STORAGE_CONTAINER_NAME: ${BLOB_STORAGE_CONTAINER_NAME:-notset}
       BLOB_STORAGE_CONNECTION_STRING: ${BLOB_STORAGE_CONNECTION_STRING:-DefaultEndpointsProtocol=https;AccountName=dummy;AccountKey=dummy;EndpointSuffix=core.windows.net}
       USE_BLOB_STORAGE_CONNECTION_STRING: "true"
-      SHAREPOINT_SITE_ID: ${SHAREPOINT_SITE_ID:-notset}
+      SHAREPOINT_HOSTNAME: ${SHAREPOINT_HOSTNAME:-notset}
+      SHAREPOINT_SITE_PATH: ${SHAREPOINT_SITE_PATH:-notset}
       SHAREPOINT_TENANT_ID: ${SHAREPOINT_TENANT_ID:-notset}
       SHAREPOINT_CLIENT_ID: ${SHAREPOINT_CLIENT_ID:-notset}
       SHAREPOINT_CLIENT_SECRET: ${SHAREPOINT_CLIENT_SECRET:-notset}
-      SHAREPOINT_DOCUMENT_LIBRARY_ID: ${SHAREPOINT_DOCUMENT_LIBRARY_ID:-notset}
+      SHAREPOINT_DOCUMENT_LIBRARY: ${SHAREPOINT_DOCUMENT_LIBRARY:-notset}
