--- a/helm/ffc-grants-file-sender/templates/container-secret.yaml
+++ b/helm/ffc-grants-file-sender/templates/container-secret.yaml
@@ -1,8 +1,9 @@
-{{- include "ffc-helm-library.container-secret" (list . "ffc-grants-file-creation.container-secret") -}}
-{{- define "ffc-grants-file-creation.container-secret" -}}
+{{- include "ffc-helm-library.container-secret" (list . "ffc-grants-file-sender.container-secret") -}}
+{{- define "ffc-grants-file-sender.container-secret" -}}
 stringData:
   APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.appInsights.key | quote }}
   BLOB_STORAGE_CONNECTION_STRING: {{ .Values.container.blobStorageConnectionString | quote }}
   SHAREPOINT_CLIENT_ID: {{ .Values.container.sharePointClientId | quote }}
   SHAREPOINT_CLIENT_SECRET: {{ .Values.container.sharePointClientSecret | quote }}
+  SHAREPOINT_TENANT_ID: {{ .Values.container.sharePointTenantId | quote }}
 {{- end -}}
