Add site version to Helm chart

--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -20,4 +20,5 @@ data:
   REDIS_PORT: {{ .Values.container.redisPort | quote }}
   REDIS_PARTITION: {{ .Values.container.redisPartition | quote }}
   SESSION_CACHE_TTL: {{ .Values.container.sessionCacheTTL | quote }}
+  SITE_VERSION: {{ .Values.container.siteVersion | quote }}
 {{- end -}}
