Removed Prod GTM. Merged events

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,8 @@ services:
       LOGIN_REQUIRED: ${LOGIN_REQUIRED:-false}
       AUTH_USERNAME: ${AUTH_USERNAME:-grants}
       AUTH_PASSWORD_HASH: ${AUTH_PASSWORD_HASH:-grants}
-      GOOGLE_TAG_MANAGER_KEY: 'GTM-KRJXHHT'
-      GOOGLE_TAG_MANAGER_SERVER_KEY: 'UA-180010783-3'
+      GOOGLE_TAG_MANAGER_KEY: 'GTM-WJ5C78H'
+      GOOGLE_TAG_MANAGER_SERVER_KEY: 'UA-179628664-4'
       COOKIE_PASSWORD: thisistestcookiepasswordthisistestcookiepasswordthisistestcookiepassword
       SERVICE_BUS_HOST: ${SERVICE_BUS_HOST:-notset}
       SERVICE_BUS_PASSWORD: ${SERVICE_BUS_PASSWORD:-notset}
