--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "standard": "^16.0.3",
+    "string-replace-loader": "^3.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
