--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -22,4 +22,6 @@ data:
   SESSION_CACHE_TTL: {{ .Values.container.sessionCacheTTL | quote }}
   GOOGLE_TAG_MANAGER_KEY: {{ .Values.container.googleTagManagerKey | quote }}
   GOOGLE_TAG_MANAGER_SERVER_KEY: {{ .Values.container.googleTagManagerServerKey | quote }}
+  START_PAGE_URL: {{ .Values.container.startPageUrl | quote }}
+
 {{- end -}}
