--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,4 @@ services:
       REDIS_PARTITION: ffc-grants-frontend
       REDIS_PASSWORD: ""
       SESSION_CACHE_TTL: 3600000
+      START_PAGE_URL: ${START_PAGE_URL:-/water/start}
