--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -46,7 +46,7 @@ container:
   projectDetailsQueueAddress: project-details
   contactDetailsQueueAddress: contact-details
   cookiePassword: thisisnotarealpasswordthisisnotarealpassword
-  loginRequired: true
+  loginRequired: false
   authUsername: grants
   authPasswordHash: dummy
   backendPollingHost: http://ffc-grants-eligibility
