--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
+    "snyk": "^1.683.0",
     "standard": "^16.0.3",
     "string-replace-loader": "^3.0.2",
     "style-loader": "^1.2.1",
