Change ingress type

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -82,7 +82,7 @@ service:
   port: 80
 
 ingress:
-  type: minion
+  type: master 
   class: nginx
   endpoint: ffc-grants-frontend
   server: example.com
