--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -57,7 +57,7 @@ container:
   redisPassword: redis
   redisPort: 6379
   redisPartition: ffc-grants-frontend
-  sessionCacheTTL: 3600000
+  sessionCacheTTL: 1200000
   googleTagManagerKey: dummy
   googleTagManagerServerKey: dummy
   startPageUrl: dummy
@@ -82,6 +82,7 @@ service:
   port: 80
 
 ingress:
+  type: master 
   class: nginx
   endpoint: ffc-grants-frontend
   server: example.com
