--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.97.3",
+  "version": "1.97.4",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -19,7 +19,8 @@
   },
   "author": "Defra",
   "contributors": [
-    "Paul Andrews <paul.andrews@defra.gov.uk>"
+    "Paul Andrews <paul.andrews@defra.gov.uk>",
+    "Satish Chatap <github.com/govTechSatish>"
   ],
   "license": "OGL-UK-3.0",
   "bugs": {
