--- a/helm/ffc-grants-frontend/templates/ingress.yaml
+++ b/helm/ffc-grants-frontend/templates/ingress.yaml
@@ -1,3 +1,19 @@
 {{- include "ffc-helm-library.azure-ingress" (list . "ffc-grants-frontend.ingress") -}}
 {{- define "ffc-grants-frontend.ingress" -}}
+{{- if not .Values.pr -}}
+metadata:
+  annotations:
+    nginx.org/mergeable-ingress-type: minion
+{{- end -}}
+{{- if .Values.pr -}}
+spec:
+  rules:
+  - host: {{ .Values.name }}-{{ .Values.pr }}.{{ .Values.ingress.server }}
+    http:
+      paths:
+      - path: {{ .Values.ingress.path | default "/" | quote }}
+        backend:
+          serviceName: {{ .Values.name | quote }}
+          servicePort: {{ .Values.service.port }}
+{{- end -}}
 {{- end -}}
