fix survey test env url

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -61,6 +61,7 @@ container:
   googleTagManagerKey: dummy
   googleTagManagerServerKey: dummy
   startPageUrl: dummy
+  surveyLink: dummy
 
 livenessProbe:
   path: /healthz
