--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -23,5 +23,6 @@ data:
   GOOGLE_TAG_MANAGER_KEY: {{ .Values.container.googleTagManagerKey | quote }}
   GOOGLE_TAG_MANAGER_SERVER_KEY: {{ .Values.container.googleTagManagerServerKey | quote }}
   START_PAGE_URL: {{ .Values.container.startPageUrl | quote }}
+  SURVEY_LINK: {{ .Values.container.surveyLink | quote }}
 
 {{- end -}}
