--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.98.2",
+  "version": "1.98.3",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -61,6 +61,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
+    "snyk": "^1.683.0",
     "standard": "^16.0.3",
     "string-replace-loader": "^3.0.2",
     "style-loader": "^1.2.1",
