--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-file-sender",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "FFC Grants file sender microservice",
   "homepage": "https://github.com/DEFRA/ffc-grants-file-sender",
   "main": "app/index.js",
@@ -13,19 +13,23 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@azure/identity": "^1.3.0",
-    "@azure/storage-blob": "^12.5.0",
-    "@hapi/hapi": "^20.0.3",
+    "@azure/identity": "^2.0.4",
+    "@azure/storage-blob": "^12.9.0",
+    "@hapi/hapi": "^20.2.2",
     "@hapi/wreck": "^17.1.0",
-    "@pnp/nodejs-commonjs": "^2.3.0",
+    "@pnp/nodejs-commonjs": "^2.13.0",
     "applicationinsights": "^1.8.10",
-    "ffc-messaging": "^2.1.1",
+    "ffc-messaging": "^2.4.0",
     "ffc-protective-monitoring": "^1.0.0",
-    "joi": "^17.4.0"
+    "joi": "^17.4.3"
+  },
+  "overrides": {
+    "node-fetch": "^2.6.7",
+    "adal-node": "^0.2.3"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
+    "jest": "^27.2.5",
+    "jest-junit": "^13.0.0",
     "nodemon": "^2.0.7",
     "standard": "^16.0.3"
   },
