--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@hapi/crumb": "^8.0.1",
     "@hapi/hapi": "^20.0.3",
     "@hapi/inert": "^6.0.2",
+    "@hapi/statehood": "^7.0.4",
     "@hapi/vision": "^6.0.1",
     "@hapi/wreck": "^17.1.0",
     "@hapi/yar": "^10.1.0",
