--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "applicationinsights": "^1.8.10",
     "bcrypt": "^5.0.1",
     "dialog-polyfill": "^0.5.6",
+    "dotenv": "^16.0.1",
     "ffc-messaging": "^2.3.0",
     "ffc-protective-monitoring": "^1.0.0",
     "govuk-frontend": "^3.13.0",
