--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.99.2",
+  "version": "1.99.3",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -34,12 +34,14 @@
     "@hapi/crumb": "^8.0.1",
     "@hapi/hapi": "^20.0.3",
     "@hapi/inert": "^6.0.2",
+    "@hapi/statehood": "^7.0.4",
     "@hapi/vision": "^6.0.1",
     "@hapi/wreck": "^17.1.0",
     "@hapi/yar": "^10.1.0",
     "applicationinsights": "^1.8.10",
     "bcrypt": "^5.0.1",
     "dialog-polyfill": "^0.5.6",
+    "dotenv": "^16.0.1",
     "ffc-messaging": "^2.3.0",
     "ffc-protective-monitoring": "^1.0.0",
     "govuk-frontend": "^3.13.0",
