--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ffc-protective-monitoring": "^1.0.3",
     "govuk-frontend": "^4.3.1",
     "joi": "^17.6.0",
+    "jsdom": "^20.0.0",
     "nunjucks": "^3.2.3",
     "uuid": "^8.3.2"
   },
