Add email sender to water

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,3 +34,10 @@ services:
       SESSION_CACHE_TTL: 1200000
       START_PAGE_URL: ${START_PAGE_URL:-/water/start}
       SURVEY_LINK: https://defragroup.eu.qualtrics.com/jfe/preview/SV_e9fFpJ6tySfdHYa?Q_CHL=preview&Q_SurveyVersionID=current
+      DESIRABILITY_SUBMITTED_TOPIC_ADDRESS: ${DESIRABILITY_SUBMITTED_TOPIC_ADDRESS:-notset}
+      WORKSHEET_HIDE_EMPTY_ROWS: ${WORKSHEET_HIDE_EMPTY_ROWS:-false}
+      WORKSHEET_PROTECT_ENABLED: ${WORKSHEET_PROTECT_ENABLED:-false}
+      SEND_EMAIL_TO_RPA: ${SEND_EMAIL_TO_RPA:-false}
+      WORKSHEET_PROTECT_PASSWORD: ${WORKSHEET_PROTECT_PASSWORD:-notset}
+      NOTIFY_EMAIL_TEMPLATE: ${NOTIFY_EMAIL_TEMPLATE:-notset}
+      EXCEL_UPLOAD_ENVIRONMENT: ${EXCEL_UPLOAD_ENVIRONMENT:-notset}
