--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
       PROJECT_DETAILS_QUEUE_ADDRESS: ${PROJECT_DETAILS_QUEUE_ADDRESS:-notset}
       CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset}
+      SCORE_REQUEST_QUEUE_ADDRESS: ${SCORE_REQUEST_QUEUE_ADDRESS:-ffc-grants-desirability-scoring-req}${MESSAGE_QUEUE_SUFFIX}
+      SCORE_RESPONSE_QUEUE_ADDRESS: ${SCORE_RESPONSE_QUEUE_ADDRESS:-ffc-grants-desirability-scoring-res}${MESSAGE_QUEUE_SUFFIX}
       BACKEND_POLLING_HOST: http://host.docker.internal:3001
       POLLING_INTERVAL: 200
       POLLING_RETRIES: 20
@@ -32,3 +34,10 @@ services:
       SESSION_CACHE_TTL: 1200000
       START_PAGE_URL: ${START_PAGE_URL:-/water/start}
       SURVEY_LINK: https://defragroup.eu.qualtrics.com/jfe/preview/SV_e9fFpJ6tySfdHYa?Q_CHL=preview&Q_SurveyVersionID=current
+      DESIRABILITY_SUBMITTED_TOPIC_ADDRESS: ${DESIRABILITY_SUBMITTED_TOPIC_ADDRESS:-notset}
+      WORKSHEET_HIDE_EMPTY_ROWS: ${WORKSHEET_HIDE_EMPTY_ROWS:-false}
+      WORKSHEET_PROTECT_ENABLED: ${WORKSHEET_PROTECT_ENABLED:-false}
+      SEND_EMAIL_TO_RPA: ${SEND_EMAIL_TO_RPA:-false}
+      WORKSHEET_PROTECT_PASSWORD: ${WORKSHEET_PROTECT_PASSWORD:-notset}
+      NOTIFY_EMAIL_TEMPLATE: ${NOTIFY_EMAIL_TEMPLATE:-notset}
+      EXCEL_UPLOAD_ENVIRONMENT: ${EXCEL_UPLOAD_ENVIRONMENT:-notset}
