--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -62,6 +62,17 @@ container:
   serviceEndDate: dummy
   serviceEndTime: dummy
   surveyLink: dummy
+  scoreRequestQueueAddress: ffc-grants-desirability-scoring-req
+  scoreResponseQueueAddress: ffc-grants-desirability-scoring-res
+  desirabilitySubmittedTopicAddress: desirability-submitted
+  notifyEmailTemplate: dummy-template
+  worksheetProtectPassword: dummy-pwd
+  worksheetProtectEnabled: false
+  sendEmailToRpa: false
+  rpaEmail: FTF@rpa.gov.uk
+  worksheetHideEmptyRows: false
+  protectiveMonitoringUrl:
+  excelUploadEnvironment: dummy
 
 livenessProbe:
   path: /healthz
