--- a/package.json
+++ b/package.json
@@ -41,13 +41,18 @@
     "bcrypt": "^5.0.1",
     "dialog-polyfill": "^0.5.6",
     "dotenv": "^16.0.1",
-    "ffc-messaging": "^2.0.0",
+    "ffc-messaging": "^2.6.2",
     "ffc-protective-monitoring": "^1.0.3",
     "govuk-frontend": "^4.3.1",
     "joi": "^17.6.0",
     "jsdom": "^20.0.0",
     "nunjucks": "^3.2.3",
     "uuid": "^8.3.2"
+  },
+  "overrides": {
+    "@azure/identity": {
+      "jsonwebtoken": "9.0.0"
+      }
   },
   "devDependencies": {
     "@hapi/catbox-memory": "^5.0.1",
