--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "3.8.11",
+  "version": "3.8.12",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build:watch": "webpack --watch",
     "lint": "standard",
     "lint-fix": "standard --fix",
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test": "jest test/unit/app/messaging/email/create-submission-msg.test.js --runInBand --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
     "start:nodemon": "nodemon --verbose --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
