--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -59,6 +59,7 @@ container:
   googleTagManagerKey: dummy
   googleTagManagerServerKey: dummy
   analyticsPropertyApi: dummy
+  analyticsTagKey: dummy
   startPageUrl: dummy
   serviceEndDate: dummy
   serviceEndTime: dummy
