--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       AUTH_PASSWORD_HASH: ${AUTH_PASSWORD_HASH:-grants}
       GOOGLE_TAG_MANAGER_KEY: 'GTM-WJ5C78H'
       GOOGLE_TAG_MANAGER_SERVER_KEY: 'G-1NQ7QYDS14'
+      ANALYTICS_PROPERTY_API: 'NVW29SmFTueM1qVawk2H2Q'
       COOKIE_PASSWORD: thisistestcookiepasswordthisistestcookiepasswordthisistestcookiepassword
       SERVICE_BUS_HOST: ${SERVICE_BUS_HOST:-notset}
       SERVICE_BUS_PASSWORD: ${SERVICE_BUS_PASSWORD:-notset}
