--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -14,9 +14,9 @@ services:
     environment:
       NODE_ENV: development
       GOOGLE_TAG_MANAGER_KEY: 'GTM-WJ5C78H'
-      GOOGLE_TAG_MANAGER_SERVER_KEY: 'G-1NQ7QYDS14'
-      ANALYTICS_PROPERTY_API: 'NVW29SmFTueM1qVawk2H2Q'
-      ANALYTICS_TAG_KEY: 'GT-MJPRKW7'
+      GOOGLE_TAG_MANAGER_SERVER_KEY: ${GOOGLE_TAG_MANAGER_SERVER_KEY:-notset}
+      ANALYTICS_PROPERTY_API: ${ANALYTICS_PROPERTY_API:-notset}
+      ANALYTICS_TAG_KEY: ${ANALYTICS_TAG_KEY:-notset}
 
     ports:
       - "3000:3000"
