--- a/docker-compose.zap.yaml
+++ b/docker-compose.zap.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   ffc-grants-frontend:
@@ -12,8 +12,8 @@ services:
       - ./test-output/:/home/node/test-output/
 
   zap-baseline-scan:
-    image: owasp/zap2docker-stable:2.11.1
-    command: zap-baseline.py -t http://ffc-grants-frontend:${PORT:-3000} -c config/zap.conf -r test-output/zap-report.html -a -d -I
+    image: softwaresecurityproject/zap-bare:2.14.0
+    command: zap.sh -cmd -quickurl http://ffc-grants-frontend:${PORT:-3000} -configfile wrk/config/zap.conf -quickout wrk/test-output/zap-report.html
     depends_on:
       - ffc-grants-frontend
     volumes:
